force-app/main/default/objects/plaunch__ScriptAndPitch_Script_Label__c/plaunch__ScriptAndPitch_Script_Label__c.object-meta.xml
<CustomObject>
    <label>ScriptAndPitch Script Label</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScriptAndPitch Script Labels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>