force-app/main/default/objects/plaunch__ScriptAndPitch_Script_Label__c/fields/plaunch__LanguageLocale__c.field-meta.xml
<CustomField>
    <fullName>plaunch__LanguageLocale__c</fullName>
    <defaultValue>&quot;en_US&quot;</defaultValue>
    <label>LanguageLocale</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>