force-app/main/default/objects/plaunch__ScriptAndPitch_Script_Label__c/fields/plaunch__ScriptAndPitch_Script__c.field-meta.xml
<CustomField>
    <fullName>plaunch__ScriptAndPitch_Script__c</fullName>
    <label>ScriptAndPitch Script</label>
    <referenceTo>plaunch__ScriptAndPitch_Script__c</referenceTo>
    <relationshipLabel>Script Labels</relationshipLabel>
    <relationshipName>ScriptAndPitchScriptLabels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>