force-app/main/default/objects/plaunch__ScriptAndPitch_Script_Label__c/fields/plaunch__Text__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Text__c</fullName>
    <label>Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>